@@ -20,7 +20,6 @@
         -- new widget stuff (seperate dashclock settings from notification settings)
         -- picture page on profiles
         -- go to jacobs settings drawer
-        -- add auto complete users to the reply activity
         -- scheduling tweets
 
     - Minor
